[gd_scene load_steps=31 format=3 uid="uid://c3cfb6de0att1"]

[ext_resource type="Script" path="res://Enemies/Goblin/Enemy.gd" id="1_h6it2"]
[ext_resource type="Texture2D" uid="uid://bi40feqdeyljc" path="res://Enemies/Goblin/Assets/goblin_idle_spritesheet.png" id="1_qjhuy"]
[ext_resource type="Shader" path="res://Shaders/BlinkShader.gdshader" id="1_t3juo"]
[ext_resource type="PackedScene" uid="uid://cm5wfph8jbxdj" path="res://Stats/Stats.tscn" id="2_j85s0"]
[ext_resource type="Texture2D" uid="uid://bllflj4k84vmn" path="res://Enemies/Goblin/Assets/goblin_run_spritesheet.png" id="2_teonk"]
[ext_resource type="PackedScene" uid="uid://c485f0w3fc2fr" path="res://Interaction Boxes/HitBox.tscn" id="5_eyrfi"]
[ext_resource type="PackedScene" uid="uid://ye6sscbkfm3t" path="res://Interaction Boxes/HurtBox.tscn" id="6_7wbxo"]
[ext_resource type="AudioStream" uid="uid://bfurnu152f1fp" path="res://Enemies/Goblin/Sounds/GoblinHitSounds1.ogg" id="8_hfrri"]
[ext_resource type="AudioStream" uid="uid://c7obdc3lj3nfm" path="res://Enemies/Goblin/Sounds/GoblinHitSounds2.ogg" id="9_78inn"]
[ext_resource type="AudioStream" uid="uid://qawxndyk1fdc" path="res://Enemies/Goblin/Sounds/GoblinHitSounds3.ogg" id="10_wwaqo"]
[ext_resource type="AudioStream" uid="uid://c3llc2n3jql2p" path="res://Enemies/Goblin/Sounds/GoblinHitSounds4.ogg" id="11_a1amp"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uhtbg"]
shader = ExtResource("1_t3juo")
shader_parameter/flash_color = Color(0.909804, 0.184314, 0, 1)
shader_parameter/flash_opacity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_l8rc2"]
atlas = ExtResource("1_qjhuy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_los0o"]
atlas = ExtResource("1_qjhuy")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_44vqy"]
atlas = ExtResource("1_qjhuy")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hthka"]
atlas = ExtResource("1_qjhuy")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mfhf0"]
atlas = ExtResource("1_qjhuy")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5hqn"]
atlas = ExtResource("1_qjhuy")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_62ryc"]
atlas = ExtResource("2_teonk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0u7h"]
atlas = ExtResource("2_teonk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iui5s"]
atlas = ExtResource("2_teonk")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh1cd"]
atlas = ExtResource("2_teonk")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkjxx"]
atlas = ExtResource("2_teonk")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7ifd"]
atlas = ExtResource("2_teonk")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_exm7l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8rc2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_los0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_44vqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hthka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mfhf0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5hqn")
}],
"loop": true,
"name": &"Idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_62ryc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0u7h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iui5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh1cd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkjxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7ifd")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aacr7"]
radius = 7.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_6x28b"]
radius = 318.025

[sub_resource type="CircleShape2D" id="CircleShape2D_yxlgp"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_imf5a"]
radius = 7.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_f28l4"]
streams_count = 4
stream_0/stream = ExtResource("8_hfrri")
stream_0/weight = 1.0
stream_1/stream = ExtResource("9_78inn")
stream_1/weight = 1.0
stream_2/stream = ExtResource("10_wwaqo")
stream_2/weight = 1.0
stream_3/stream = ExtResource("11_a1amp")
stream_3/weight = 1.0

[node name="EnemyGoblin" type="RigidBody2D"]
y_sort_enabled = true
collision_layer = 4
collision_mask = 517
mass = 5.0
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_h6it2")
SPEED = 200
MAX_SPEED = 500

[node name="Stats" parent="." instance=ExtResource("2_j85s0")]
max_health = 2

[node name="MainSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_uhtbg")
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_exm7l")
animation = &"Idle"
autoplay = "Idle"
frame = 3
frame_progress = 0.972925

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_aacr7")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="NavigationObstacle2D" type="NavigationObstacle2D" parent="."]

[node name="PlayerDetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource("CircleShape2D_6x28b")

[node name="HitBox" parent="." instance=ExtResource("5_eyrfi")]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CircleShape2D_yxlgp")

[node name="HurtBox" parent="." instance=ExtResource("6_7wbxo")]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource("CircleShape2D_imf5a")

[node name="HitSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_f28l4")
max_distance = 500.0
bus = &"SFX"

[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_player_detection_zone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_player_detection_zone_body_exited"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]

[editable path="HitBox"]
[editable path="HurtBox"]
